# ThermalNeutronSource

./: .gitignore  README.md  b.txt
NCrystalTest/: CMakeLists.txt  CMakeListsOld.txt  DMX.cc
Python&CSV/Oct 15 Filter Test/: FilterGraph.py  FilterGraph1.py  Informacion.csv
Python&CSV/Poly Test/: EscapeData.csv  EscapeData30.csv  HitData.csv  HitData1.csv  HitData30.csv  HitDataVacuum.csv
SBCTest/include/: DMXDetectorConstruction.hh
SBCTest/src/: DMXDetectorConstruction.cc  DMXDetectorMaterial.icc
Simple/: CMakeLists.txt  exampleB1.cc
random/: CMakeLists.txt  DMX.cc
thermal_neutron/: CMakeLists.txt  DMX.cc  DMXtemp.cc  Makefile  UnderstandingCrossSections.txt  ambe_spectrum.mac  cmake_install.cmake
thermal_neutron/build1/: CMakeCache.txt  DMX  G4History.macro  General.csv  Informacion.csv  Makefile  ambe_spectrum.his  cmake_install.cmake  neutron_source.mac  test2.txt  text2.txt
thermal_neutron/build1/seeds/: currentEvent.rndm
thermal_neutron/build2/: CMakeCache.txt  DMX  Makefile  cmake_install.cmake
thermal_neutron/include/: DMXAnalysisManager.hh  DMXDetectorConstruction.hh  DMXDetectorMaterial.ihh
thermal_neutron/src/: DMXDetectorConstruction.cc  DMXDetectorMaterial.icc  DMXPhysicsList.cc  DMXScintSD.cc  DMXSteppingAction.cc
thermal_neutron_noncrystal/: CMakeLists.txt  DMX.cc
thermal_neutron_noncrystal/include/: DMXDetectorMaterial.ihh
thermal_neutron_test/: CMakeLists.txt  DMX.cc
thermal_neutron_test/include/: DMXDetectorConstruction.hh
thermal_neutron_test/src/: DMXScintSD.cc
underground_physics/: CMakeLists.txt  DMX.cc
underground_physics/include/: DMXDetectorConstruction.hh  DMXDetectorMaterial.ihh  DMXScintSD.hh  TN_source.mac
underground_physics/src/: DMXDetectorConstruction.cc  DMXDetectorMaterial.icc  DMXEventAction.cc  DMXEventActionMessenger.cc  DMXPrimaryGeneratorAction.cc  DMXRunAction.cc  DMXRunActionMessenger.cc  DMXScintSD.cc  DMXSteppingAction.cc
